--- a/tutorial/rgbmaker-example1.ipynb
+++ b/tutorial/rgbmaker-example1.ipynb
@@ -18,11 +18,11 @@
     "\n",
     "- PARAMETERS\n",
     "\n",
-    "     - name = your name, default = 'Anonymous'\n",
-    "     - position = 'objName', 'RA DEC '\n",
-    "     - imagesopt = 1,default=2\n",
-    "     - radius = float_value='0.1' - '2.0'\n",
-    "     - kind = 'jpg/png', 'plot', default='base64'"
+     "     -name = your name, default = 'Anonymous'\n",
+    " position = 'objName', 'RA DEC '\n",
+    " imagesopt = 1,default=2\n",
+    " radius = float_value='0.1' - '2.0'\n",
+    " kind = 'jpg/png', 'plot', default='base64'"
    ]
   },
   {
